--- a/blogGui/pom.xml
+++ b/blogGui/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>19.0.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version>
+<!--            <scope>provided</scope>-->
+        </dependency> 
     </dependencies>
     <build>
         <resources>
@@ -35,6 +41,13 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>22</release>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.34</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
             <plugin>
